minor API update
